--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container wide">
         <div class="row">
             <a href="./" class="logo">
-                <img alt="28tec おもしろ研究所" decoding="async" height="70" loading="lazy" src="images/28tec-removebg-preview.png" width="150">
+                <img alt="28tec おもしろ研究所" decoding="async" height="70" loading="lazy" src="https://github.com/sakaguchiii/28tec/blob/main/28tec-removebg-preview.png?raw=true" width="150">
             </a>
             <ul>
                 <li><a href="">introduce</a></li>
