--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
   
   <!-- style.css 読み込み -->
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="style.css">
   
   <!-- Google Fonts 読み込み -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,14 +24,14 @@
   <header>
     <div class="container wide">
         <div class="row">
-            <a href="./" class="logo">
+            <a href="index.html" class="logo">
                 <img alt="28tec おもしろ研究所" decoding="async" height="70" loading="lazy" src="28tec-removebg-preview.png" width="150">
             </a>
             <ul>
-                <li><a href="">introduce</a></li>
-                <li><a href="">小説</a></li>
-                <li><a href="">ゲーム</a></li>
-                <li><a href="">雑学</a></li>
+                <li><a href="index.html">introduce</a></li>
+                <li><a href="books.html">小説</a></li>
+                <li><a href="game.html">ゲーム</a></li>
+                <li><a href="trivia.html">雑学</a></li>
                 <li><a href="">sns</a></li>
             </ul>
         </div>
@@ -53,7 +53,7 @@
     <section class="section2">
         <div class="container">
             <div class="row">
-                <a class="module" href="#">
+                <a class="module" href="game.html">
                     <img src="images/gameIcon.png" alt="#">
                     <div class="module_title">
                         <h2 class="module_title_text">ゲーム</h2>
@@ -61,7 +61,7 @@
                     </div>
                     <p class="module_subtitle">サカグチのゲームを<span class="red">PLAY！</span></p>
                 </a>
-                <a class="module" href="#">
+                <a class="module" href="books.html">
                     <img src="images/noteIcon.png" alt="#">
                     <div class="module_title">
                         <h2 class="module_title_text">読書</h2>
@@ -69,7 +69,7 @@
                     </div>
                     <p class="module_subtitle">本の情報を<span class="red">GET！</span></p>
                 </a>
-                <a class="module" href="#">
+                <a class="module" href="trivia.html">
                     <img src="images/electricIcon.png" alt="#">
                     <div class="module_title">
                         <h2 class="module_title_text">雑学ページ</h2>
@@ -105,7 +105,7 @@
   </main>
   <footer class="add-siteFooter">
     <div class="add-siteFooter_logo">
-        <a href="./" class="hoverLink">
+        <a href="index.html" class="hoverLink">
           <img src="images/28tec-removebg-preview.png" alt="28tec Logo" height="97" width="206">
         </a>
     </div>
