--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container wide">
         <div class="row">
             <a href="index.html" class="logo">
-                <img alt="28tec おもしろ研究所" decoding="async" height="70" loading="lazy" src="28tec-removebg-preview.png" width="150">
+                <img alt="28tec おもしろ研究所" decoding="async" height="70" loading="lazy" src="https://github.com/sakaguchiii/28tec/blob/main/28tec-removebg-preview.png?raw=true" width="150">
             </a>
             <ul>
                 <li><a href="index.html">introduce</a></li>
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="row">
                 <a class="module" href="game.html">
-                    <img src="images/gameIcon.png" alt="#">
+                    <img src="https://github.com/sakaguchiii/28tec/blob/main/gameIcon.png?raw=true" alt="#">
                     <div class="module_title">
                         <h2 class="module_title_text">ゲーム</h2>
                         <hr>
@@ -62,7 +62,7 @@
                     <p class="module_subtitle">サカグチのゲームを<span class="red">PLAY！</span></p>
                 </a>
                 <a class="module" href="books.html">
-                    <img src="images/noteIcon.png" alt="#">
+                    <img src="https://github.com/sakaguchiii/28tec/blob/main/noteIcon.png?raw=true" alt="#">
                     <div class="module_title">
                         <h2 class="module_title_text">読書</h2>
                         <hr>
@@ -70,7 +70,7 @@
                     <p class="module_subtitle">本の情報を<span class="red">GET！</span></p>
                 </a>
                 <a class="module" href="trivia.html">
-                    <img src="images/electricIcon.png" alt="#">
+                    <img src="https://github.com/sakaguchiii/28tec/blob/main/electricIcon.png?raw=true" alt="#">
                     <div class="module_title">
                         <h2 class="module_title_text">雑学ページ</h2>
                         <hr>
@@ -96,7 +96,7 @@
                     </p>
                 </div>
                 <div class="module">
-                    <img src="images/sakaguchi.png" alt="阪口翼の画像">
+                    <img src="https://github.com/sakaguchiii/28tec/blob/main/sakaguchi.png?raw=true" alt="阪口翼の画像">
                 </div>
             </div>
         </div>
@@ -106,19 +106,19 @@
   <footer class="add-siteFooter">
     <div class="add-siteFooter_logo">
         <a href="index.html" class="hoverLink">
-          <img src="images/28tec-removebg-preview.png" alt="28tec Logo" height="97" width="206">
+          <img src="https://github.com/sakaguchiii/28tec/blob/main/28tec-removebg-preview.png?raw=true" alt="28tec Logo" height="97" width="206">
         </a>
     </div>
     <div class="add-siteFooter_sns">
         <ul>
             <li>
                 <a href="https://line.me" class="hoverLink" target="_blank">
-                    <img src="images/sns-icon-line.svg" height="50" width="50" alt="line">
+                    <img src="https://github.com/sakaguchiii/28tec/blob/main/sns-icon-line.svg?raw=true" height="50" width="50" alt="line">
                 </a>
             </li>
             <li>
                 <a href="https://www.instagram.com/28_tec?igsh=MTMxaWtuMWpzbmozeQ%3D%3D&utm_source=qr" class="hoverLink" target="_blank">
-                    <img src="images/instagram_icon2.png" height="60" width="60" alt="instagram">
+                    <img src="https://github.com/sakaguchiii/28tec/blob/main/instagram_icon2.png?raw=true" height="60" width="60" alt="instagram">
                 </a>
             </li>
         </ul>
