--- a/trivia.html
+++ b/trivia.html
@@ -10,12 +10,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
   
   <!-- style.css 読み込み -->
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="style.css">
   
   <!-- Google Fonts 読み込み -->
-  <link rel="pre1connect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap" rel="stylesheet">
+
 </head>
   
 <body>
@@ -24,7 +25,7 @@
     <div class="container wide">
         <div class="row">
             <a href="./" class="logo">
-                <img alt="28tec おもしろ研究所" decoding="async" height="70" loading="lazy" src="images/28tec-removebg-preview.png" width="150">
+                <img alt="28tec おもしろ研究所" decoding="async" height="70" loading="lazy" src="https://github.com/sakaguchiii/28tec/blob/main/28tec-removebg-preview.png?raw=true" width="150">
             </a>
             <ul>
                 <li><a href="">introduce</a></li>
